--- a/index.html
+++ b/index.html
@@ -24,29 +24,12 @@
 
       h1 {
         font-size: 3rem;
-        color: White;
+        color: darkslategray;
         z-index: 1000;
-      }
-
-      img:nth-child(2) {
-        width: 300px;
-        position: absolute;
-        right: 0;
-      }
-      img:nth-child(1) {
-        width: 300px;
-        position: absolute;
-        left: 0;
-      }
-      body {
-        background: url(head.png);
-        background-position: center;
       }
     </style>
   </head>
   <body>
-    <img src="yvo.png" />
-    <img src="yvo.png" />
     <h1>Yvo Cilon</h1>
   </body>
 </html>
