--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       }
 
       h1 {
-        font-size: 3rem;
-        color: darkslategray;
+        font-size: 20vmin;
+        letter-spacing: 2vmin;
+        color: #444;
         z-index: 1000;
       }
     </style>
