--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         letter-spacing: 2vmin;
         color: #444;
         z-index: 1000;
+        border: 10px solid #444;
+        padding: 5vmin;
+      }
+
+      h1:hover {
+        background-color: #444;
+        color: white;
       }
     </style>
   </head>
