--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         padding: 5vmin;
       }
 
-      h1:hover {
+      h1:hover,
+      h1:active {
         background-color: #444;
         color: white;
       }
