add image for higher conversion

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
         font-size: 18vmin;
         letter-spacing: 2vmin;
         color: #444;
+        outline: 1px solid white;
         z-index: 1000;
         border: 10px solid #444;
         padding: 5vmin;
+        background-image: url(yvo-yvo-yvo.jpg);
+        background-size: cover;
       }
 
       h1:hover,
