--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
       rel="stylesheet"
     />
     <style>
-      html,
       body {
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        font-family: "Open Sans", sans-serif;
         display: flex;
         width: 100%;
         height: 100%;
@@ -21,27 +15,15 @@
         justify-content: center;
         align-items: center;
       }
-
-      h1 {
-        font-size: 18vmin;
-        letter-spacing: 2vmin;
-        color: #444;
-        outline: 1px solid white;
-        z-index: 1000;
-        border: 10px solid #444;
-        padding: 5vmin;
-        background-image: url(yvo-yvo-yvo.jpg);
-        background-size: cover;
-      }
-
-      h1:hover,
-      h1:active {
-        background-color: #444;
-        color: white;
+      img {
+        width: 60vw;
       }
     </style>
   </head>
   <body>
-    <h1>Yvo Cilon</h1>
+    <img
+      src="/laptop-yvo-hackerman.png"
+      alt="beautiful laptop with stickers showing how awesome Yvo is"
+    />
   </body>
 </html>
