--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
   <head>
     <title>Yvo Cilon</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
-      rel="stylesheet"
-    />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <style>
       body {
         display: flex;
